# calendario-tech

./: .env  .gitignore  CONTRIBUTING_EVENTS.md  LICENSE  README.md  docker-compose.yml  event_mock.py  index.html  manifest.webmanifest  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  registerSW.js  sw.js
.github/: pull_request_template.md
assets/: index-BJl0H_ID.css  index-Dneqkjfg.js
backend/: .eslintrc.js  Dockerfile  README.md  alembic.ini  app.py  backup.sql  constants.py  eslint.config.js  events.sqlite3  example.env  gunicorn.conf.py  package-lock.json  package.json  pyproject.toml  render-build.sh  requirements.txt  tsconfig.json  vercel.json
backend/data_events/: 2024-12-10_Event-X.yml  2025-4-10_Event-y.yml  2025-4-10_Event-z.yml  2025-5-11_Event-x.yml
backend/docs/: request_examples.py  response_examples.py
backend/migrations/: env.py
backend/routes/: events.py
backend/services/: db.py  events.sqlite3  version_db.py
backend/src/: constants.py  copyEventsFiles.ts  exceptions.py  index.ts  models.py  schemas.py
backend/src/events/: eventsController.ts  eventsRoutes.ts
backend/src/migrations/: env.py
backend/src/migrations/versions/: 12fe86290847_add_status_to_event.py  4ccbc61c2f07_add_states_and_currencies.py  86d91b32b398_add_ol_state_to_online_events.py  91302d5bd571_initial_migration.py  dab9d9abb4a0_update_cost_type.py  ecf0a0c53a6d_init.py
backend/src/routes/: events.py
backend/src/services/: auth.py  backup_db_pr.py  event.py  version_db.py
backend/src/utils/: events.ts  generate_access_token.py
(+218 files in other folders)
