[project]
name = "calendario-tech"
version = "0.1.0"
description = "Rest API for Calendario Tech"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "annotated-types==0.7.0",
    "apispec==6.8.1",
    "apispec-webframeworks==1.2.0",
    "attrs==25.1.0",
    "blinker==1.9.0",
    "click==8.1.8",
    "Faker==36.1.1",
    "Flask==3.1.0",
    "Flask-Cors==5.0.0",
    "flask-openapi3==4.1.0",
    "flask-openapi3-redoc==2.4.0",
    "flask-openapi3-scalar==1.25.118",
    "gunicorn==23.0.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.5",
    "jsonmerge==1.9.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "MarkupSafe==3.0.2",
    "marshmallow==3.26.1",
    "mistune==3.1.1",
    "packaging==24.2",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "PyYAML==6.0.2",
    "referencing==0.36.2",
    "rpds-py==0.22.3",
    "tzdata==2025.1",
    "Werkzeug==3.1.3",
    "APScheduler==3.11.0",
    "PyGithub==2.6.1",
    "python-dotenv==1.1.0",
    "flask-sqlalchemy==3.1.1",
    "alembic==1.16.0"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
